--- a/Dokumentation/Recherche/Object-Tracking.tex
+++ b/Dokumentation/Recherche/Object-Tracking.tex
@@ -1,18 +1,18 @@
-﻿\section{Object-Tracking – Objekt Verfolgung}
+\subsection{Object-Tracking – Objekt Verfolgung}
 Die Erkennung des Korbs, sowie die Bestimmung der Distanz zum Ziel müssen durch einen geeigneten Mechanismus gelöst werden. Genauigkeit und Geschwindigkeit spielen dabei eine gewichtige Rolle, wie auch der Aufwand und die Kosten für die Umsetzung.
 
-\subsection{Google Obj-Tracking with OpenCV}
+\subsubsection{Google Obj-Tracking with OpenCV}
 Zur Objekterkennung wäre eine App für ein Smartphone denkbar, welche mithilfe der Kamera die Objekterkennung durchführt und die Informationen an den Controller weitergibt. Anleitungen und Source Code sind vorhanden. Als Framework wird OpenCV verwendet. Google Obj-Tracking ist eine Bibliothek die eine Vielzahl von Bildverarbeitungsalgorithmen bereitstellt. Das Framework ist sehr gut beschrieben, es sind viele Tutorials vorhanden.
 
-\subsection{Accord.Net}
+\subsubsection{Accord.Net}
 Accord.Net ist eine OpenSource Bibliothek für das .Net Framework. Es werden Code Beispiele und Tutorials angeboten. Gut Dokumentiert.
 
-\subsection{Ultrasonic / Ultraschall }
+\subsubsection{Ultrasonic / Ultraschall }
 Ultraschallsensoren können sehr günstig sein allerdings ist die Genauigkeit je nach anwendungsfall nicht sehr gross. Die Temperatur beeinflusst die Genauigkeit massgeblich. 
 
-\subsection{Infrarot}
+\subsubsection{Infrarot}
 Infrarot Sensoren geben einen Infrarot Lichtstrahl ab, ein Sensor erkennt dann die Rückstrahlung womit sich Objekte erkennen lassen. Die Distanz beträgt je nach Sensor zwischen 1 – 150 cm. Infrarot kann durch äussere Einflüsse wie Lichtquellen an Genauigkeit einbüssen.
 
-\subsection{Laser-Scanning}
+\subsubsection{Laser-Scanning}
 Die Reichweite eines Lasers beträgt je nach Art bis zu mehreren hundert Metern. Die Genauigkeit liegt je nach Auswertungshardware im Milimeterbereich. Die Kosten für Laser-Systeme sind allerdings sehr hoch, wie auch deren Gewicht.
 
