--- a/Dokumentation/Recherche/Wurfmechanismen.tex
+++ b/Dokumentation/Recherche/Wurfmechanismen.tex
@@ -1,18 +1,18 @@
-﻿\section{Wurfmechanismen}
+\subsection{Wurfmechanismen}
 Falls die Bälle abgeworfen werden müssen, wird eine Wurfweite zwischen einem und zwei Metern benötigt. Diese kann mit folgenden Möglichkeiten erreicht werden:
 
-\subsection{Pneumatikzylinder}
+\subsubsection{Pneumatikzylinder}
 Pneumatikzylinder eigenen sich gut für die Anwendung als Stossmechanismus. Sie zeichnen sich durch hohe Geschwindigkeiten (50 bis 1500 $\frac{mm}{s}$) sowie mittlere Kräfte (10 bis 1000 N) aus. Die Anschaffungskosten liegend bei ungefähr 60.- CHF, je nach Dimensionierung. Um die Endlagen abzufragen verwendet man Zylinder mit eingebauten Magneten, welche mittels Sensoren abgefragt werden. Die Stossgeschwindigkeitsregelung erfolgt in den meisten Fällen durch eine Abluftdrosselung.
 
-\subsection{Beschleunigungsräder}
+\subsubsection{Beschleunigungsräder}
 Die heutigen Tennisballwurfmaschinen sind nach dem Prinzip von zwei Beschleunigungsrädern aufgebaut. Diese drehen gegeneinander mit hoher Drehzahl und beschleunigen den Ball auf seine Abwurfgeschwindigkeit. Durch unterschiedliche Drehzahlen des Oberrades zum Unterrad kann ein Drall in Form von \enquote{Topspin} oder umgekehrt in Form von \enquote{Slice} dem Ball gegeben werden. Dieser stabilisiert die Flugbahn.\\
 Der Ball wird beim Durchlaufen der Räder leicht gequetscht und entspannt sich danach beim Austritt aus den Rädern, um genügend Reibung zum Rad zu erhalten. Durch den Abschuss werden die Beschleunigungräder abgebremst und müssen danach wieder für den nächsten Ball beschleunigt werden. Die Anforderungen an die Motoren sind relativ hoch, da diese einen hohen Drehzahlbereich sowie ein hohes Drehmoment aufweisen sollten.
 
-\subsection{Katapult}
+\subsubsection{Katapult}
 Katapulte wurden bereits in der Antike und dem Mittelalter verwendet um Geschosse abzufeuern. Es wird unterschieden zwischen einarmigen und zweiarmigen Katapulten. Die zweitgenannten sind unter dem Namen Balliste besser bekannt. Sie nutzen die Kraft durch eine Torsionsfeder oder bei grösseren Katapulten durch ein Gegengewicht. Für kleine Ballisten können auch elastische Materialien die benötigte Kraft zur Verfügung stellen. Da die Katapulte für jeden Schuss neu gespannt werden müssen sind sie relativ langsam in der Schusskadenz. 
 
-\subsection{Gebläsewurfmaschine}
+\subsubsection{Gebläsewurfmaschine}
 Mittels eines Gebläses wird ein Rohr mit Luft durchströmt. In dieses Rohr werden die Bälle durch eine Öffnung eingelassen. Da die Luft dem Ball nicht vollständig ausweichen kann wird dieser beschleunigt und durch das Rohr hinausbefördert. Diese Lösung ist eher nachteilhaft, da es hohe Anforderungen an den Volumenstrom und die Dichtheit des Rohres stellt.
 
-\subsection{Schleuderrad}
+\subsubsection{Schleuderrad}
 Mithilfe eines Schleuderrades können die Bälle auf die benötigte Geschwindigkeit beschleunigt werden. Durch die wirkende Zentripetalkraft und die Umfangskraft werden die Bälle nach vorne geworfen. Dazu benötigt es einen Ausklinkmechanismus um die Bälle im richtigen Moment loszulassen. Vorteil dieser Wurfart ist, dass eine hohe Wurfkadenz erzielt wird. Die Schwierigkeit dieser Möglichkeit ist es, dass der Ausklinkmechanismus auf dem Rad ausgelöst werden muss und diese Steuersignale auf den Drehmechanismus gelangen müssen.
