--- a/Dokumentation/Recherche/Flugobjekte.tex
+++ b/Dokumentation/Recherche/Flugobjekte.tex
@@ -1,11 +1,11 @@
-﻿\section{Flugobjekte}
+\subsection{Flugobjekte}
 Durch die gestellten Anforderungen bietet es sich an, die Problemstellung mit einem Flugobjekt zu lösen. Es bestehen diverse Möglichkeiten, das Problem zu lösen. Dazu zählt ein Quadcopter, ein Zeppelin und eine Rakete. Die Hauptschwierigkeit besteht bei der Steuerung der Objekte während der Flugphase. Eine weitere Teilschwierigkeit ist, eine berechenbare Flugbahn zu erreichen. 
 
-\subsection{Quadrocopter}
+\subsubsection{Quadrocopter}
 Ein Quadcopter kann nach einer schon vorhandenen Bauanleitung zusammengebaut werden. Die Flugsteuerung erfolgt über mehrere Beschleunigungssensoren, wodurch die Flugbahn sehr stabil gehalten werden kann. Die Traglast eines Quadcopters kann durch Verwendunge eines stärkeren Motors erhöht werden, wodurch es kein Problem ist, auch schwerere Gegenstände zu transportieren. Die Steuerung des Quadcopter ist schwierig. Die Orientierung im Raum ist mit einer einfachen Software nicht möglich. Um eine bestimmte Flugbahn einzuhalten, benötigt man diverse Kameras, welche den Flugraum überwachen. Um eine genaue Fluggbahn zu erreichen, braucht es eine aufwendige Softwarelösung. Der Quadcopter und die Steuerung sind sehr kostenintensiv.
 
-\subsection{Zeppelin}
+\subsubsection{Zeppelin}
 Der Bau eines Zeppelins kann mit wenig Mittel realisiert werden. Der Auftriebskörper kann der jeweiligen Last angepasst werden. Der Vortrieb funktioniert mit einem einfachen Propellerantrieb. Nur schon wenig Traglast in die Luft zu befördern bedarf eines grossen Auftriebskörpers. Die Steuerung des ganzen Zeppelins verläuft eher träge und hinzu kommt, dass durch Luftströmungen die Flugbahn leicht gestört werden kann. Die Konstruktion eines Zeppelins wird somit den Anforderungen nicht ganz gerecht.
 
-\subsection{Rakete}
+\subsubsection{Rakete}
 Die Rakete ist die schnellste Möglichkeit, ein Objekt zu beschleunigen. Der Antriebskörper kann unterschiedlichen Traglasten angepasst werden. Die Wurfbahn einer Rakete ist auf kleine Distanz fast unmöglich zu berechnen. Eine Rakete eignet sich nur um längere Distanzen zurückzulegen. Die Umsetzung einer Lösung durch Raketenantrieb ist nur schwer zu realisieren.
