--- a/Dokumentation/Recherche/Versorgung.tex
+++ b/Dokumentation/Recherche/Versorgung.tex
@@ -1,4 +1,4 @@
-﻿\section{Versorgung}
+\subsection{Versorgung}
 Eine Möglichkeit um das Produkt mit Energie zu versorgen, ist ein Akkumulator. Es gibt verschiedene Typen: Blei-Akku, Li-Ionen-Akku, Nickel-Cadmium-Akku (NiCd), Nickel-Metallhydird-Akku (NiMh). Jeder Typ hat verschiedene Vor- und Nachteile, die in der Tabelle \ref{tab:UebersichtVorNachTeil} ersichtlich sind.\\
 \\
 Gemäss den Anforderungen zählt ein Akkumulator nicht zum bewerteten Gewicht, kann jedoch durch sein Gewicht für zusätzliche Stabilität sorgen. Wichtig für die anschliessende Auswahl eines Akkumulators sind die Spannung, Strom, Kapazität des Akkumulators. An dieser Stelle werden lediglich die Eckdaten ausgewiesen, die die Akkus auszeichnen, wie in der Tabelle \ref{tab:UebersichtAkku} ersichtlich.\\ 
@@ -30,12 +30,12 @@ Gemäss den Anforderungen zählt ein Akkumulator nicht zum bewerteten Gewicht, k
 	\label{tab:UebersichtAkku} 
 \end{table}
 
-\subsection{Externe Versorgung}
+\subsubsection{Externe Versorgung}
 Externe Versorgung bezeichnet die Speisung des Geräts durch ein Netzteil. Ein Vorteil eines Netzteils ist die stabile Energie- / Stromversorgung. Die Zuführung von einer Steckdose zum Spielfeld wird gewährleistet sein. Als einziger Nachteil gilt somit, dass ein Netzteil nicht als Ballast gewertet wird und somit nachteilig für die Bewertung wäre im Vergleich mit einem Akku.
 
-\subsection{Pneumatik}
+\subsubsection{Pneumatik}
 Eine Versorgung mit Druckluft ist aufwendig und muss beim Spielfeld zur Verfügung gestellt werden. Ansonsten müsste man einen Kompressor mit Wartungseinheit organisieren. Zudem sind die Komponenten (Zylinder, Ventile, etc.) im Neuzustand seht teuer.
 
-\subsection{Hydraulik}
+\subsubsection{Hydraulik}
 Die Versorgung mit Hydraulik-Öl ist noch aufwendiger als jene mit Druckluft. Es muss ein eigenes System mit Pumpe, Schläuchen, Hydrauliköl und teuren Komponenten erstellt werden. Bei einem Defekt, resp. Unfall mit Hydrauliköl entsteht zudem schnell ein grosser Sachschaden und erfordert einen grossen Reinigungsaufwand. 
 
