Anhangsdokument Analyse Titel angepasst

--- a/Dokumentation/Morphologie/Analyse.tex
+++ b/Dokumentation/Morphologie/Analyse.tex
@@ -1,4 +1,4 @@
-\section{Analyse}
+\section{Analyse (Kopie Testat 2)}
 	Als Gesamtübersicht und als Eruierungshilfe der einzelnen Teilprobleme wurde zu Beginn der Lösungsfindung eine Skizze entworfen. Diese beinhaltet alle nötigen Elemente des Produkts und stellt diese in Relation zueinander dar. Produkt-Komponenten wurden dabei in blau, externe in grün dargestellt.
 	
 	\begin{figure}[h!]
