Bild im Querformat und kleinere Änderungen vorgemommen
gem Hr. Thalmann

--- a/Dokumentation/Enddokumentation/Varianten/VerschiedeneVarianten.tex
+++ b/Dokumentation/Enddokumentation/Varianten/VerschiedeneVarianten.tex
@@ -15,21 +15,24 @@ in  Abbildung \ref{fig:Funktionsskizze} ersichtlich ist.\\
 \\
 Nach der Ermittlung dieser Teilprobleme mussten für die einzelnen Bereiche nach Lösungsansätzen
 recherchiert werden. Die Resultate dieser Recherche, sowie die danach folgende Bewertung der
-gefundenen Lösungen ist aus Platzgründen im Anhangsdokument hinterlegt. Um die Ergebnisse der Bewertung
+gefundenen Lösungen ist aus Platzgründen im Anhangsdokument zu finden. Um die Ergebnisse der Bewertung
 sinnvoll als Entscheidungshilfe einsetzen zu können, wurden sie kompakt zu einem Grobkonzept
-zusammengefasst.\\
+zusammengefasst. (Siehe Anhangsdokument)\\
 \\
 Jedes Teilproblem ist bezüglich den Vor- und Nachteilen nach den definierten Zielsetzungen
 bewertet worden. Dadurch lassen sich grafisch geeignete Kombinationsmöglichkeiten herleiten und
 untereinander vergleichen. Um möglichst vielen differenzierten Ansätzen Rechnung zu tragen,
 wurden vier Varianten während einer Diskussionsrunde festgelegt.
 \newpage
-\begin{figure}[t]
-	\centering
-	\includegraphics[width=1.08\textwidth]{Enddokumentation/Varianten/Bilder/Grobkonzept.png}
-	\caption{Lösungsansätze für die einzelnen Teilprobleme mit den vier gewählten Varianten}
-	\label{fig:Grobkonzept}
-\end{figure}
+\begin{landscape}
+	\begin{figure}[t]
+		\centering
+		\includegraphics[scale=0.84,clip,trim= 4mm 12mm 22mm 3mm]
+		{Enddokumentation/Varianten/Bilder/Grobkonzept.png}
+		\caption{Lösungsansätze für die einzelnen Teilprobleme mit den vier gewählten Varianten}
+		\label{fig:Grobkonzept}
+	\end{figure}
+\end{landscape}
 \noindent Die blaue Variante ist die Kombination aller Lösungsansätze mit der höchsten
 Prozentzahl. Die rote Variante basiert auf der Idee, die Bälle in eine Kugel einzuschliessen,
 das Gerät parallel zur Spielfeldwand zu verschieben und den Korb mit einer Smartphone-Kamera zu
