Tabelle angepasst und erweitert
Gemäss Input von Herr Thalmann

--- a/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
@@ -16,29 +16,30 @@ damit alle Tennisbälle die gleiche Startenergie aufweisen.
 Dadurch ist eine gleichmässige Wurfweite und eine hohe Reproduzierbarkeit gewährleistet. \\
 \begin{figure}[h!]
 		\centering
-		\includegraphics[width=0.95\textwidth,clip,trim=5mm 60mm 15mm 80mm] {Enddokumentation/Loesungskonzept/Bilder/Beschreibung_Komponenten-edited.jpg}
+		\includegraphics[width=0.95\textwidth,clip,trim=5mm 55mm 15mm 80mm] {Enddokumentation/Loesungskonzept/Bilder/Beschreibung_Komponenten-edited.jpg}
 		\caption{Geräteübersicht}
 		\label{fig:Geraeteuebersicht}
 \end{figure}
 \begin{table}[h!]
-	\begin{tabular}{|c|c|p{7.5cm}|}
-		\hline \textbf{Pos} & \textbf{Bezeichnung} & \textbf{Funktion} \\ 
-		\hline 1 & Startgerät (Computer) & Senden des Startbefehls, Empfangen des Endbefehl, Akustische und visuelle Signalausgabe
-		\\ 
-		\hline 2 & Master  (Smartphone) & Empfangen des Startbefehls, Senden des Endbefehls,
-		Fotografieren, Auswerten und Steuern des Controllers
-		\\ 
-		\hline 3 & Controller & Steuerung und Regelung der Antriebe \\ 
-		\hline 4 & Gestell & Stabilisieren des Systems,
-		Seitliche Führung der Bälle
-		\\ 
-		\hline 5 & Stelleinheit & Ausrichten des Gerätes zum Korb \\ 
-		\hline 6 & Förderband & Ballförderung zu den Schwungräder \\ 
-		\hline 7 & Schwungräder inkl. Antrieb & Beschleunigen der Bälle \\ 
-		\hline 
-	\end{tabular} 
-	\centering
-	\caption{Bezeichnung der Teilkomponenten}	
-	\label{tab:BezTeilkomponenten}
+	\begin{threeparttable} 
+		\begin{tabular}{p{8mm}p{3.5cm}p{8.1cm}}
+		    \textbf{Pos}\tnote{*} & \textbf{Bezeichnung} & \textbf{Funktion} \\ 
+			\hline\rule{0pt}{11pt} 1 & Startgerät (Computer) & Senden des Startbefehls, Empfangen des Endbefehl, 
+			Akustische und visuelle Signalausgabe \\ 
+			    \rule{0pt}{11pt}   2 & Master  (Smartphone) & Empfangen des Startbefehls, Senden des Endbefehls,
+			Fotografieren, Auswerten und Steuern des Controllers \\ 
+			  \rule{0pt}{11pt}     3 & Controller & Steuerung und Regelung der Antriebe \\ 
+			  \rule{0pt}{11pt}     4 & Gestell & Stabilisieren des Systems,	seitliche Führung der Bälle \\ 
+			   \rule{0pt}{11pt}    5 & Stelleinheit & Ausrichten des Gerätes zum Korb \\ 
+			   \rule{0pt}{11pt}    6 & Förderband & Ballförderung zu den Schwungräder \\ 
+			   \rule{0pt}{11pt}    7 & Schwungräder inkl. Antrieb & Beschleunigen der Bälle \\ 
+		\end{tabular} 
+		\centering
+		\caption{Bezeichnung der Teilkomponenten}	
+		\label{tab:BezTeilkomponenten}
+		\begin{tablenotes}\footnotesize 
+			\item[*] Die Position bezieht sich auf die Nummern in Abbildung \ref{fig:Geraeteuebersicht}.
+		\end{tablenotes}
+	\end{threeparttable} 
 \end{table}\\
 In den folgenden Abschnitten wird nach dem zeitlichen Ablauf des Balles, die einzelnen Komponenten des Ballwerfers näher beschrieben. 
