--- a/Dokumentation/Enddokumentation/Loesungskonzept/SmartphoneAlsMaster.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/SmartphoneAlsMaster.tex
@@ -4,7 +4,7 @@
 	können direkt auf dem Gerät erfolgen und durch den USB-Port wird eine sichere Verbindung zum Controller gewährleistet. Die Alternative, einzelne Module (Kamera, drahtlose Schnittstelle, Recheneinheit) zu verbauen, 
 	gewährleistet eine erhöhte Flexibilität, allerdings verbunden mit steigendem Aufwand und höherem Preis. 
 	Zudem hätte die Verwendung von Einzelmodulen unter Umständen eine Gewichtszunahme zur Folge, da keine vergleichbare Kompaktheit wie bei einem Smartphone besteht. 
-	Der Einsatz eines Smartphones bietet im Vergleich zu einzelnen Modulen somit entscheidende Vorteile.\\
+	Der Einsatz eines Smartphones bietet im Vergleich zu einzelnen Modulen somit entscheidende Vorteile.
 	Es ist wichtig, dass die Kamera das Spielfeld komplett erfassen kann, weswegen das Smartphone vorne am Gerät angebracht wird. 
 	Eine Befestigung an der Front des Gerätes bietet sich an, da dort eine hohe Stabilität vorhanden ist, 
 	was für eine optimale Bildaufnahme wichtig ist.\\
