ET-Gruppe neueste Änderungen implementiert
Der neue Titel der ET-Gruppe implementiert und unsere Doku so angepasst,
dass es passt

--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -58,6 +58,7 @@
     \input{Enddokumentation/Loesungskonzept/Schwungraeder}
     \input{Enddokumentation/Loesungskonzept/Antriebsstrang}
     \input{Enddokumentation/Loesungskonzept/Versorgungskonzept}
+    \subsection{Hardware}
     \input{Enddokumentation/ET_Gruppe/common/Hardwarezusammenarbeit}
     \newpage
     \input{\EtPath/Ansteuerung}
