--- a/Dokumentation/Funktionstests/Pneumatikzylinder.tex
+++ b/Dokumentation/Funktionstests/Pneumatikzylinder.tex
@@ -1,17 +1,17 @@
 \subsection{Pneumatikzylinder}
 
 \begin{tabular}{p{3.6cm}p{9.4cm}}
-\textit{Typ}              & Ballmaschine \\ 
-\textit{Datum}:           & 08.10.2014   \\
-\textit{Ort}:             & Bachmann Engineering AG (Zofingen) \\
-\textit{Tester}:          & Gruppe 32\\
-\textit{Ziel des Testes}: & Das Ziel dieses Testes bestand darin, den gebauten Prototyp auf die Wurfwiederholgenauigkeit zu testen. \\
-\textit{Fazit / Verbesserungs-\newline vorschlag}: & Ein Pneumatikzylinder arbeitet sehr zielgenau und schnell. Falls dieses Verfahren in die engere Auswahl kommt, müssen die Parameter wie Beschleunigung, Abschussgeschwindigkeit und Druck berechnet werden.\\ 
-\textit{Ziel erreicht}:& Ja\\
+\rule{0pt}{11pt}\textit{Typ}              & Ballmaschine \\ 
+\rule{0pt}{11pt}\textit{Datum}:           & 08.10.2014   \\
+\rule{0pt}{11pt}\textit{Ort}:             & Bachmann Engineering AG (Zofingen) \\
+\rule{0pt}{11pt}\textit{Tester}:          & Gruppe 32\\
+\rule{0pt}{11pt}\textit{Ziel des Testes}: & Das Ziel dieses Testes bestand darin, den gebauten Prototyp auf die Wurfwiederholgenauigkeit zu testen. \\
+\rule{0pt}{11pt}\textit{Fazit / Verbesserungs-\newline vorschlag}: & Ein Pneumatikzylinder arbeitet sehr zielgenau und schnell. Falls dieses Verfahren in die engere Auswahl kommt, müssen die Parameter wie Beschleunigung, Abschussgeschwindigkeit und Druck berechnet werden.\\ 
+\rule{0pt}{11pt}\textit{Ziel erreicht}:& Ja\\
 \end{tabular}
 
 \begin{figure}[h!]
-	\includegraphics[width=5cm]{Funktionstests/Bilder/PneumatikzylinderBild.jpg}
+	\includegraphics[width=0.8\textwidth]{Funktionstests/Bilder/PneumatikzylinderBild.jpg}
 	\centering
 	\caption{Funktionsmuster Pneumatikzylinder} 
 \label{abb:PneumatikzylinderBild}
