--- a/Dokumentation/Funktionstests/Ballmaschine.tex
+++ b/Dokumentation/Funktionstests/Ballmaschine.tex
@@ -1,11 +1,11 @@
 \subsection{Ballmaschine}
 \begin{tabular}{p{3.6cm}p{9.4cm}}
-\textit{Typ}              & Ballmaschine \\ 
-\textit{Datum}:           & 18.10.2014   \\
-\textit{Ort}:             & Labor HSLU \\
-\textit{Tester}:          & Gruppe 32 \\
-\textit{Ziel des Testes}: & Das Ziel dieses Testes bestand darin: Den gebauten Prototyp (Ballmaschine) auf die Genauigkeit und Wurfweite zu testen, weitere Erkenntnisse über die Drehzahl der Räder zu eruieren und die erforderliche Stromstärke unter realen Bedingungen testen.  \\
-\textit{Fazit / Verbesserungs-\newline vorschlag}: & Die Wurfmaschine kann mit einigen Verbesserungen sehr gute und genaue „Schüsse“ erzielen. Zu verbessern sind:
+\rule{0pt}{11pt}\textit{Typ}              & Ballmaschine \\ 
+\rule{0pt}{11pt}\textit{Datum}:           & 18.10.2014   \\
+\rule{0pt}{11pt}\textit{Ort}:             & Labor HSLU \\
+\rule{0pt}{11pt}\textit{Tester}:          & Gruppe 32 \\
+\rule{0pt}{11pt}\textit{Ziel des Testes}: & Das Ziel dieses Testes bestand darin: Den gebauten Prototyp (Ballmaschine) auf die Genauigkeit und Wurfweite zu testen, weitere Erkenntnisse über die Drehzahl der Räder zu eruieren und die erforderliche Stromstärke unter realen Bedingungen testen.  \\
+\rule{0pt}{11pt}\textit{Fazit / Verbesserungs-\newline vorschlag}: & Die Wurfmaschine kann mit einigen Verbesserungen sehr gute und genaue „Schüsse“ erzielen. Zu verbessern sind:
 \begin{itemize}
     \item Stabilere Achsen
     \item genauere und gleichmässige Zuführung der Bälle.
