--- a/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
@@ -32,7 +32,7 @@ Dadurch ist eine gleichmässige Wurfweite und eine hohe Reproduzierbarkeit gewä
 			  \rule{0pt}{11pt}     4 & Gestell & Stabilisieren des Systems,	seitliche Führung der Bälle \\ 
 			   \rule{0pt}{11pt}    5 & Stelleinheit & Ausrichten des Gerätes zum Korb \\ 
 			   \rule{0pt}{11pt}    6 & Förderband & Ballförderung zu den Schwungräder \\ 
-			   \rule{0pt}{11pt}    7 & Schwungräder inkl. Antrieb & Beschleunigen der Bälle \\ 
+			   \rule{0pt}{11pt}    7 & Schwungräder & Beschleunigen der Bälle \\ 
 		\end{tabular} 
 		\centering
 		\caption{Bezeichnung der Teilkomponenten}	
