Bilder komprimiert und geringfügige Anpassungen vorgenommen

--- a/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
@@ -13,13 +13,15 @@ Die Tennisbälle werden durch zwei Schwungräder beschleunigt. Die Schwungräder
 der Tennisball wird dazwischen ausgestossen. Die Zuführung der Tennisbälle erfolgt mit einem eigens gesteuerten Förderband. 
 Das Förderband muss die Bälle mit konstanter Geschwindigkeit zu den Schwungrädern transportieren, 
 damit alle Tennisbälle die gleiche Startenergie aufweisen. 
-Dadurch ist eine gleichmässige Wurfweite und eine hohe Reproduzierbarkeit gewährleistet. \\
+Dadurch ist eine gleichmässige Wurfweite und eine hohe Reproduzierbarkeit gewährleistet.
 \begin{figure}[h!]
 		\centering
-		\includegraphics[width=0.95\textwidth,clip,trim=5mm 55mm 15mm 80mm] {Enddokumentation/Loesungskonzept/Bilder/Beschreibung_Komponenten-edited.jpg}
+		\includegraphics[width=0.95\textwidth,clip,trim=0mm 18mm 0mm 24mm]
+		{Enddokumentation/Loesungskonzept/Bilder/Beschreibung_Komponenten-edited.jpg}
 		\caption{Geräteübersicht}
 		\label{fig:Geraeteuebersicht}
 \end{figure}
+\newpage
 \begin{table}[h!]
 	\begin{threeparttable} 
 		\begin{tabular}{p{8mm}p{3.5cm}p{8.1cm}}
@@ -41,5 +43,5 @@ Dadurch ist eine gleichmässige Wurfweite und eine hohe Reproduzierbarkeit gewä
 			\item[*] Die Position bezieht sich auf die Nummern in Abbildung \ref{fig:Geraeteuebersicht}.
 		\end{tablenotes}
 	\end{threeparttable} 
-\end{table}\\
-In den folgenden Abschnitten wird nach dem zeitlichen Ablauf des Balles, die einzelnen Komponenten des Ballwerfers näher beschrieben. 
+\end{table}
+\parindent 0pt In den folgenden Abschnitten wird nach dem zeitlichen Ablauf des Balles, die einzelnen Komponenten des Ballwerfers näher beschrieben. 
