Anhang am Anhnagsdokument eingefügt
Ist zwar komisch im Anhangsdokument einen Anhang zu haben, ist aber
nötig damit die Referenzen funktionieren. Sonst müsste man den Text
stellenweise neu schreiben. (da wo es die \ref{apx:...} hat)

--- a/Dokumentation/Anhangsdokument.tex
+++ b/Dokumentation/Anhangsdokument.tex
@@ -99,6 +99,16 @@
         \renewcommand{\refname}{Literatur- und Quellenverzeichnis}
     \end{flushleft}
     \appendix
+    % Beginn des Anhangs
+        \begin{appendix}
+            \clearpage
+            \pagenumbering{Roman} % römische Nummerierung des Anhangs (Grosse Buchstaben)
+            %\section{Anhang}
+            %\newpage
+            \section{Anhang}
+            \input{Morphologie/Anhang/Teilproblembeurteilung}
+            \newpage
+        \end{appendix} 
     
       
 \end{document}
