--- a/Dokumentation/Enddokumentation/Varianten/VerschiedeneVarianten.tex
+++ b/Dokumentation/Enddokumentation/Varianten/VerschiedeneVarianten.tex
@@ -27,8 +27,8 @@ wurden vier Varianten während einer Diskussionsrunde festgelegt.
 \begin{landscape}
 	\begin{figure}[t]
 		\centering
-		\includegraphics[scale=0.8,clip,trim= 2mm 2mm 2mm 8mm]
-		{Enddokumentation/Varianten/Bilder/Grobkonzept.png}
+		\includegraphics[scale=0.8,clip,trim= 15mm 37mm 21mm 19mm]
+		{Enddokumentation/Varianten/Bilder/Grobkonzept.pdf}
 		\caption{Lösungsansätze für die einzelnen Teilprobleme mit den vier gewählten Varianten}
 		\label{fig:Grobkonzept}
 	\end{figure}
