--- a/Dokumentation/Enddokumentation/Loesungskonzept/Controller.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Controller.tex
@@ -2,7 +2,8 @@
 \label{sec:Controller}
 	\begin{wrapfigure}{r}{0.45\textwidth}
 		\centering
-		\includegraphics[width=0.44\textwidth]{Enddokumentation/Loesungskonzept/Bilder/Blockschaltbild_Controller.png}
+		\includegraphics[width=0.44\textwidth,clip,trim= 50mm 16cm 86mm 6.8cm]
+			{Enddokumentation/Loesungskonzept/Bilder/Blockschaltbild_Controller.pdf}
 		\caption{Blockschaltbild der Controller-Hardware}
 		\label{fig:Blockschaltbild_Controller}
 	\end{wrapfigure}
