--- a/Dokumentation/Enddokumentation/Varianten/VerschiedeneVarianten.tex
+++ b/Dokumentation/Enddokumentation/Varianten/VerschiedeneVarianten.tex
@@ -8,7 +8,8 @@ Um Übersicht über die Teilprobleme zu behalten wurde eine Funktionsskizze gesc
 in  Abbildung \ref{fig:Funktionsskizze} ersichtlich ist.\\
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=1\textwidth]{Enddokumentation/Varianten/Bilder/Funktionsskizze.png}
+	\includegraphics[scale=0.73,clip,trim= 14mm 17.8cm 12mm 50mm]
+	{Enddokumentation/Varianten/Bilder/Funktionsskizze.pdf}
 	\caption{Funktionsskizze}
 	\label{fig:Funktionsskizze}
 \end{figure}
