newpage für testberichte

--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -70,6 +70,7 @@
     %
     % Tests
     %
+    \newpage
     \section{Testberichte}
     %\input{Enddokumentation/Tests/Tests}
     \input{Funktionstests/Ballmaschine}
