--- a/Dokumentation/Enddokumentation/Loesungskonzept/Softwarearchitektur.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Softwarearchitektur.tex
@@ -3,7 +3,8 @@
 	Zur Übersicht über den erarbeiteten Lösungsansatz bietet sich die Darstellung durch ein Kontextdiagramm an. Darin zu erkennen sind die fünf Hauptkomponenten  DesktopViewer, CoreApp, Detector, MediaCommunication und ControllerCommunication. Weiter enthält das System mindestens drei Schnittstellen, einerseits die Bluetooth Schnittstelle zwischen Startgerät und Ballwerfer, des Weiteren muss die Kommunikation mit Kamera und Controller gewährleistet sein. Die Schnittstelle zur Kamera sollte, wenn wie geplant ein Smartphone verwendet wird, bereits durch das entsprechende Betriebssystem gegeben sein, weshalb in diesem Dokument nicht weiter auf diese Schnittstelle eingegangen wird. 
 \begin{figure}[h!]
 		\centering
-		\includegraphics[width=0.9\textwidth]{Enddokumentation/Loesungskonzept/Bilder/Kontextdiagramm_v2.jpg}
+		\includegraphics[width=0.9\textwidth,clip,trim= 0mm 94mm 207mm 20mm]
+		{Enddokumentation/Loesungskonzept/Bilder/Kontextdiagramm_v2.pdf}
 		\caption{Kontextdiagramm}		
 \end{figure}
 
@@ -29,7 +30,8 @@
 		% Übersicht Schnittstellen fehlt Schnittstellen
 		\begin{figure}[h!]
 			\centering
-			\includegraphics[width=0.9\textwidth]{Enddokumentation/Loesungskonzept/Bilder/Schnittstellen.jpg}
+			\includegraphics[width=0.9\textwidth,clip,trim= 12mm 205mm 43mm 24mm]
+			{Enddokumentation/Loesungskonzept/Bilder/Schnittstellen.pdf}
 			\caption{Schnittstellen}		
 		\end{figure}
 		Als weiteres Hauptelement des entworfenen Systems werden im nachfolgenden Abschnitt die in der Grafik erkennbaren Schnittstellen (Bluetooth und Controller) deklariert.
