--- a/Dokumentation/Enddokumentation/Loesungskonzept/Funktionsbeschreibung.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Funktionsbeschreibung.tex
@@ -11,7 +11,8 @@ wird das akustische Endsignal auf dem Smartphone ausgegeben.
 \newpage
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=0.9\textwidth]{Enddokumentation/Loesungskonzept/Bilder/FlowOnChart_v2.jpg}
+	\includegraphics[width=1\textwidth,clip,trim=10mm 169mm 89mm 15mm]
+	{Enddokumentation/Loesungskonzept/Bilder/FlowOnChart_v2.pdf}
 	\caption{Ablaufdiagramm zur Funktionsbeschreibung}
 	\label{fig:FlowChart}
 \end{figure}
