--- a/Dokumentation/Enddokumentation/Loesungskonzept/SmartphoneAlsMaster.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/SmartphoneAlsMaster.tex
@@ -24,8 +24,8 @@
 		der Mittelpunkt des Korbes und der damit verbundene Winkel des Ballwerfers zum Korb trigonometrisch bestimmt werden.
 		\begin{figure}[h!]
 			\centering
-			\includegraphics[width=0.93\textwidth,clip,trim=0mm 5mm 0mm 10mm]
-			{Enddokumentation/Loesungskonzept/Bilder/Flowchart_Korberkennung.jpg}
+			\includegraphics[width=0.84\textwidth,clip,trim=9mm 115mm 41mm 9mm]
+			{Enddokumentation/Loesungskonzept/Bilder/Flowchart_Korberkennung.pdf}
 			\caption{Ablaufdiagramm zum Korberkennungs-Algorithmus}
 			\label{fig:KorberkennungFlowchart}
 		\end{figure}
