--- a/Dokumentation/Enddokumentation/Loesungskonzept/Hardware.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Hardware.tex
@@ -5,7 +5,8 @@
     Der Antrieb des Förderbands muss nur in einer Richtung funktionierten. Deshalb ist die Ansteuerung besonders einfach. Die Steuerung des DC-Motors erfolgt mittels eines PWM-Signals, das über einen entsprechenden Transistor direkt angesteuert wird. Abbildung \ref{fig:Schema_DC-Motor} zeigt, wie die Ansteuerung des DC-Motors umgesetzt wird.
     \begin{figure}[h!] %{0.45\textwidth}
     	\centering
-    	\includegraphics[width=0.4\textwidth]{Enddokumentation/Loesungskonzept/Bilder/SchemaDcMotor.png}
+    	\includegraphics[width=0.5\textwidth,clip,trim=37mm 159mm 62mm 37mm]
+    	{Enddokumentation/Loesungskonzept/Bilder/SchemaDcMotor.pdf}
     	\caption{Schema der DC-Motoransteuerung}
     	\label{fig:Schema_DC-Motor}
     \end{figure}
