Etwas zur Fallbacklösung geschrieben
Erklärt was wir machen, falls nicht auf dem Spartphone gerechnet werden
kann

--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -49,7 +49,7 @@
     \input{Enddokumentation/Loesungskonzept/Geraeteuebersicht}
     \input{Enddokumentation/Loesungskonzept/Startgeraet}
     \input{Enddokumentation/Loesungskonzept/SmartphoneAlsMaster}
-    \newpage
+    \clearpage
     \input{Enddokumentation/Loesungskonzept/Controller}
     \input{Enddokumentation/Loesungskonzept/AufbauMechanik}
     \input{Enddokumentation/Loesungskonzept/Stelleinheit}
