--- a/Dokumentation/Enddokumentation/Anhang/Berechnungen.tex
+++ b/Dokumentation/Enddokumentation/Anhang/Berechnungen.tex
@@ -51,6 +51,7 @@ wird mit trigonometrischer Beziehung hergeleitet.
     \centering
     \caption{keine Ahnung}
     \label{abb:KreisErkaerung}
+    \vspace{5mm}
 \end{wrapfigure}
 Da $\Delta x$ vom Winkel $\alpha$ abhängt, siehe Abbildung \ref{abb:KreisErkaerung} muss die
 folgende Abhängigkeit gelten:
