--- a/Dokumentation/Enddokumentation/Schluss/Schluss.tex
+++ b/Dokumentation/Enddokumentation/Schluss/Schluss.tex
@@ -1,8 +1,29 @@
 \section{Schlussdiskussion}
-In einer ersten Phase wurde die Aufgabenstellung in Teilprobleme zerlegt. Für diese partiellen Probleme konnte anschliessend nach bestehenden Lösungen recherchiert werden, welche wiederum eine Bewertung erhielten und in unterschiedlichen Konstellationen mehrere Grobkonzepte bildeten. \\
+In einer ersten Phase wurde die Aufgabenstellung in Teilprobleme zerlegt. Für diese partiellen 
+Probleme konnte anschliessend nach bestehenden Lösungen recherchiert werden, welche wiederum 
+eine Bewertung erhielten und in unterschiedlichen Konstellationen mehrere Grobkonzepte bildeten.\\
 \\
-Bei der Schaffung der Grobkonzepte mussten einige Grundprobleme angegangen werden. So wurde festgelegt, dass ein statischer Werfer konstruiert wird, welcher sich nicht von der Startposition wegbewegt. Dies, da sich bei der Verwendung eines Fahrwerks lediglich neue Problemfelder wie Rückstoss oder Bestimmung der Eigenposition auftun. Die Verwendung eines Smartphones bot sich an, weil dadurch Drahtlos-Adapter, Rechenkapazität und Kamera in einer Komponente zur Verfügung stehen. \\
+Bei der Schaffung der Grobkonzepte mussten einige Grundprobleme angegangen werden. So wurde 
+festgelegt, dass ein statischer Werfer konstruiert wird, welcher sich nicht von der Startposition 
+wegbewegt. Dies, da sich bei der Verwendung eines Fahrwerks lediglich neue Problemfelder wie 
+Rückstoss oder Bestimmung der Eigenposition auftun. Die Verwendung eines Smartphones bot sich 
+an, weil dadurch Drahtlos-Adapter, Rechenkapazität und Kamera in einer Komponente zur Verfügung 
+stehen. \\
 \\
-Dieses grobe erste Konzept wurde weiter ausgearbeitet und daraus ein Feinkonzept geschaffen, welches die Grundlage für die Realisierung des Projekts ist: Die Lokalisierung des Korbes wird mit einer eigens entwickelten Smartphone-App realisiert. Weiter wurde die Regelungstechnik zur Ansteuerung der Brushless-Motoren in Kollaboration mit Team 27 ausgearbeitet. Zum Abwurf der Bälle sollen konkave Schwungräder dienen, wobei die Zuführung der Bälle über ein Förderband geschieht. \\
+Dieses grobe erste Konzept wurde weiter ausgearbeitet und daraus ein Feinkonzept geschaffen, 
+welches die Grundlage für die Realisierung des Projekts ist: Die Lokalisierung des Korbes wird 
+mit einer eigens entwickelten Smartphone-App realisiert. Zum Abwurf der Bälle sollen konkave 
+Schwungräder dienen, wobei die Zuführung der Bälle über ein Förderband 
+geschieht. \\
 \\
-Insgesamt wurde ein umfassendes Konzept geschaffen, welches die gesetzten Ziele und Rahmenbedingungen erfüllt und den sofortigen Beginn der Umsetzung Anfang nächstes Semester gewährleistet.
+Die Elektrotechnik Studierenden haben sich zu einer ET-Gruppe zusammengeschlossen, um 
+teamübergreifend gemeinsame Probleme zu lösen. Dies hat sich dahingehend ausgezahlt, dass 
+die Brushless-Ansteuerungstest mit dem FPGA mit weniger Aufwand als mit einer diskreten Schaltung 
+aufgebaut werden konnte. Weiter gibt es Probleme, wie die Stepper-Ansteuerung, die von einer anderen 
+Gruppe erarbeitet wird. Somit kann man sich auf andere Probleme konzentrieren. Ein weiterer wichtiger 
+Aspekt dieser Zusammenarbeit ist, dass realitätsnah eine teamübergeordnete Kollaboration geübt werden 
+kann.\\
+\\
+Insgesamt wurde ein umfassendes Konzept geschaffen, welches die gesetzten Ziele und 
+Rahmenbedingungen erfüllt und den sofortigen Beginn der Umsetzung Anfang nächstes Semester 
+gewährleistet.
